--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "devDependencies": {
     "eslint": "^8.36.0",
     "eslint-plugin-vue": "^9.10.0"
+  },
+  "dependencies": {
+    "vue": "^3.2.47"
   }
 }
